crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__allow_empty_first_line.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
assertion_line: 183
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/allow_empty_first_line.py
---
## Input

```python
def foo():
    """
    Docstring
    """

    # Here we go
    if x:

        # This is also now fine
        a = 123

    else:
        # But not necessary
        a = 123

    if y:

        while True:

            """
            Long comment here
            """
            a = 123
    
    if z:

        for _ in range(100):
            a = 123
    else:

        try:

            # this should be ok
            a = 123
        except:

            """also this"""
            a = 123


def bar():

    if x:
        a = 123


def baz():

    # OK
    if x:
        a = 123

def quux():

    new_line = here


class Cls:

    def method(self):

        pass


async def async_fn():

    """Docstring."""


@decorated
async def async_fn():

    """Docstring."""

    
def top_level(
    a: int,
    b: str,
) -> Whatever[Generic, Something]:

    def nested(x: int) -> int:
        pass
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -5,7 +5,6 @@
 
     # Here we go
     if x:
-
         # This is also now fine
         a = 123
 
@@ -14,26 +13,20 @@
         a = 123
 
     if y:
-
         while True:
-
             """
             Long comment here
             """
             a = 123
 
     if z:
-
         for _ in range(100):
             a = 123
     else:
-
         try:
-
             # this should be ok
             a = 123
         except:
-
             """also this"""
             a = 123
 
```

## Ruff Output

```python
def foo():
    """
    Docstring
    """

    # Here we go
    if x:
        # This is also now fine
        a = 123

    else:
        # But not necessary
        a = 123

    if y:
        while True:
            """
            Long comment here
            """
            a = 123

    if z:
        for _ in range(100):
            a = 123
    else:
        try:
            # this should be ok
            a = 123
        except:
            """also this"""
            a = 123


def bar():

    if x:
        a = 123


def baz():

    # OK
    if x:
        a = 123


def quux():

    new_line = here


class Cls:

    def method(self):

        pass


async def async_fn():
    """Docstring."""


@decorated
async def async_fn():
    """Docstring."""


def top_level(
    a: int,
    b: str,
) -> Whatever[Generic, Something]:

    def nested(x: int) -> int:
        pass
```

## Black Output

```python
def foo():
    """
    Docstring
    """

    # Here we go
    if x:

        # This is also now fine
        a = 123

    else:
        # But not necessary
        a = 123

    if y:

        while True:

            """
            Long comment here
            """
            a = 123

    if z:

        for _ in range(100):
            a = 123
    else:

        try:

            # this should be ok
            a = 123
        except:

            """also this"""
            a = 123


def bar():

    if x:
        a = 123


def baz():

    # OK
    if x:
        a = 123


def quux():

    new_line = here


class Cls:

    def method(self):

        pass


async def async_fn():
    """Docstring."""


@decorated
async def async_fn():
    """Docstring."""


def top_level(
    a: int,
    b: str,
) -> Whatever[Generic, Something]:

    def nested(x: int) -> int:
        pass
```
