crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__backslash_before_indent.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input

```python
class Plotter:
\
    pass

class AnotherCase:
  \
    """Some
    \
    Docstring
    """
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,5 +1,4 @@
 class Plotter:
-
     pass
 
 
```

## Ruff Output

```python
class Plotter:
    pass


class AnotherCase:
    """Some
    \
    Docstring
    """
```

## Black Output

```python
class Plotter:

    pass


class AnotherCase:
    """Some
    \
    Docstring
    """
```
