crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__comment_after_escaped_newline.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input

```python
def bob(): \
         # pylint: disable=W9016
    pass


def bobtwo(): \
    \
  # some comment here
    pass
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,8 +1,8 @@
-def bob():  # pylint: disable=W9016
+def bob():
+    # pylint: disable=W9016
     pass
 
 
 def bobtwo():
-
     # some comment here
     pass
```

## Ruff Output

```python
def bob():
    # pylint: disable=W9016
    pass


def bobtwo():
    # some comment here
    pass
```

## Black Output

```python
def bob():  # pylint: disable=W9016
    pass


def bobtwo():

    # some comment here
    pass
```
